--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "buefy": "^0.9.23",
     "bulma": "^0.9.4",
     "collect.js": "^4.36.1",
+    "js-event-bus": "^1.1.1",
     "lodash": "^4.17.21",
     "vue": "^2.7.7",
     "vue-icon-packs": "^1.1.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@vitejs/plugin-legacy": "^2.0.0",
     "@vitejs/plugin-vue2": "^1.1.2",
+    "@vitest/ui": "^0.29.8",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^1.3.0",
     "eslint": "^8.5.0",
